fix admin and landing page header
fix admin layout header
* adjust z-index:500 - this makes top header on top of all elements
* prevent another dom elements to overlap the top header

fix landingpage header logo - mobile view
* update style.css under  @media only screen and (max-width: 479px) 
* add display: none;
* this hides the logo in mobile view ( logo consumes too much screen space )

--- a/public/adminpage/css/style.css
+++ b/public/adminpage/css/style.css
@@ -28,7 +28,7 @@ a:hover {
 	top: 0;
 	 width:87%;
     margin: 0 auto;
-	z-index: 1;
+	z-index: 500; /*always top over other elements*/
 	background:#fff;
 }
 /*--header main start here--*/
